<resources>
    <string name="action_settings">Settings</string>
    <string name="dash_search_hint">Search</string>
    <string name="dash_lens_apps_title">Applications</string>
    <string name="dash_lens_other_title">Other</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_lens_preferences">Search sources</string>
    <string name="title_activity_theme_preferences">Themes</string>
    <string name="title_activity_dev_logs">Logs</string>
    <string name="pinned">has been pinned to the launcher</string>
    <string name="unpinned">has been unpinned from the launcher</string>
    <string name="notpinned">isn\'t pinned</string>
    <string name="alreadypinned">is already pinned</string>
    <string name="developed_by">Developed by Robin Jacobs</string>
    <string name="honourable_mentions">Honourable mentions</string>
    <string name="button_back">Back</string>
    <string name="button_about">About</string>
    <string name="button_contribute">Contribute</string>
    <string name="button_apply">Apply</string>
    <string name="title_preferences">Preferences</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_unity">Unity</string>
    <string name="pref_header_launcher">Launcher</string>
    <string name="pref_header_dash">Dash</string>
    <string name="pref_header_panel">Panel</string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_header_dev">Developer options</string>
    <string name="pref_header_functionality">Functionality</string>
    <string name="pref_header_appearance">Appearance</string>
    <string name="category_colourcalc">Dominant colour calculation</string>
    <string name="option_launchericon_size">Pinned icon size</string>
    <string name="hint_launchericon_size">How large icons for pinned apps should be. The slider goes from 48dip to 120dip, with the default (right in the middle) being 84dip.</string>
    <string name="option_launchericon_opacity">Icon background opacity</string>
    <string name="hint_launchericon_opacity">How opaque the background colour of icons in the Launcher should be.</string>
    <string name="option_launcherservice_enabled">Make the Launcher available inside other apps</string>
    <string name="hint_launcherservice_enabled">When you swipe from the bottom half of the left edge of the screen, the Launcher will appear, allowing you to launch apps which you have pinned to the Launcher without having to go to the home screen.\n(EXPERIMENTAL)</string>
    <string name="option_launcher_running_show">Show running apps</string>
    <string name="hint_launcher_running_show">The Launcher will show which apps are currently running. This will be indicated by a small arrow on the left side of the icon. Apps which are running but have not been pinned to the Launcher will also be shown.\nNOTE: This feature no longer works reliably from Android 5.0 onwards because of restrictions that were added to the operating system.</string>
    <string name="option_panel_show">Show</string>
    <string name="hint_panel_show">Whether the Panel at the top of the screen should be shown or not.</string>
    <string name="option_panel_opacity">Opacity</string>
    <string name="hint_panel_opacity">How opaque the Panel should be.</string>
    <string name="option_unitybackground_dynamic">Dynamic background colour</string>
    <string name="hint_unitybackground_dynamic">Dynamically pick the background colour of transparent Unity components (Launcher, and the Dash and Panel when the Dash is opened) based on the dominant colour of the wallpaper. This won\'t work when a live wallpaper is set, in which case it will fall back to a transparent black.</string>
    <string name="option_unitybackground_colour">Background colour</string>
    <string name="hint_unitybackground_colour">The background colour that should be used for transparent Unity components.</string>
    <string name="message_unitybackground_colour">Use the sliders to pick a colour.</string>
    <string name="option_unitybackground_opacity">Background opacity</string>
    <string name="hint_unitybackground_opacity">How opaque the background colour of transparent Unity components should be.</string>
    <string name="option_unitywallpaper_blur">Wallpaper blur method</string>
    <string name="hint_unitywallpaper_blur">The method that should be used to blur the background when the Dash is opened. When \"Downscale &amp; upscale\" is chosen and it fails (or a live wallpaper is set), \"Darken\" will be used as fallback.</string>
    <string name="option_launcher_edge">Screen edge</string>
    <string name="hint_launcher_edge">To which screen edge the Launcher should be attached.</string>
    <string name="option_widgets_enabled">Widgets</string>
    <string name="hint_widgets_enabled">Enable <b>experimental</b> widget support. Experimental in this case means it pretty much just doesn\'t work. If you\'re a user and not a developer, there is pretty much no reason why you would want to enable this option at this stage. If you notice things are broken, and you have this option enabled, you might want to consider seeing if disabling it solves the issue you are experiencing.</string>
    <string-array name="keys_unitywallpaper_blur">
        <item>Don\'t blur</item>
        <item>Darken</item>
        <item>Downscale &amp; upscale (default)</item>
    </string-array>
    <string-array name="keys_launcher_edge">
        <item>Left (default)</item>
        <item>Right</item>
    </string-array>
    <string name="option_wallpaper">Wallpaper</string>
    <string name="hint_wallpaper">Change wallpaper</string>
    <string name="option_colourcalc_advanced">Take more samples</string>
    <string name="hint_colourscalc_advanced">Taking more samples greatly increases accuracy but can result in longer loading times on slower devices.</string>
    <string name="option_colourcalc_hsv">Use HSV</string>
    <string name="hint_colourcalc_hsv">Using HSV (Hue, Saturation, Value) instead of plain RGB (Red, Green, Blue) will result in colours being much more vibrant, but the calculations that are being preformed are more complicated which can result in longer loading times on slower devices.</string>
    <string name="option_dashsearch_full">Advanced search</string>
    <string name="hint_dashsearch_full">Enabling this option will result in better Dash search results but will also affect performance on slower devices or devices with a lot of apps installed. If Dash search is slow for you, you might want to consider disabling this.</string>
    <string name="option_dashsearch_lenses">Use lenses</string>
    <string name="hint_dashsearch_lenses">Lenses provide extra search functionality. Using lenses you can search other services like DuckDuckGo, Stack Overflow, or even your local files, right from the Dash.</string>
    <string name="option_dashsearch_lenses_maxresults">Results per lens</string>
    <string name="hint_dashsearch_lenses_maxresults">The maximum number of search results that is shown from each lens.</string>
    <string name="option_dash_ready_show">Open Dash by default</string>
    <string name="hint_dash_ready_show">The Dash will automatically be opened once apps are loaded.</string>
    <string name="option_lenses">Search sources</string>
    <string name="hint_lenses">Choose which source searches you want to use and in which order you want their results to appear in the Dash. When you do a search in the Dash, your query is sent to all enabled lenses and their results are shown.</string>
    <string name="option_theme">Theme</string>
    <string name="hint_theme">Choose which Linux distribution you want DistroHopper to look like.</string>
    <string name="option_dev">Developer mode</string>
    <string name="hint_dev">Access debug logs and other technical information. Enabling this will negatively impact performance and stability.</string>
    <string name="option_dev_logs">Logs</string>
    <string name="hm_timvdstaaij_name">Tim van der Staaij</string>
    <string name="hm_timvdstaaij_why">* Testing (If he doesn\'t manage to wreck it then it\'s probably safe for consumption by the rest of the world.)\n
        * Help with the dominant colour calculation function.</string>
    <string name="hm_todddavies_name">Todd Davies</string>
    <string name="hm_todddavies_why">* I used his ProgressWheel component, since the default (round) Android ProgressBar component can\'t actually indicate progress.\n
        https://github.com/Todd-Davies/ProgressWheel/</string>
    <string name="hm_tacone_name">tacone (from Stack Overflow)</string>
    <string name="hm_tacone_why">* I used his ExpandableHeightGridView component.\n
        http://stackoverflow.com/a/8483078/521361</string>
    <string name="hm_commonsguy_name">Mark Murphy (Commonsware)</string>
    <string name="hm_commonsguy_why">* I used his ColorMixer component in the Preferences screen.\n
        https://github.com/commonsguy/cwac-colormixer</string>
    <string name="translators_title">Translators</string>
    <string name="title_activity_contribute">How can I contribute?</string>
    <string name="contribute_intro">A lot of time and hard work went into the development of this application. If you\'d like to help out, there are several ways in which you can do so.</string>
    <string name="contribute_translate_title">Translating</string>
    <string name="contribute_translate_description">DistroHopper is available in several languages. This is because volunteers provide the project with their translations. If DistroHopper has not been translated yet into your own language, and you understand English (and you have sufficient knowledge of Ubuntu to understand some of the more Unity-related terms), then helping out with translations is a good way to help out.
        \nTranslations for DistroHopper are managed on Transifex. All you need to do is request to join a translation team. After that I will approve your request and you are good to go.</string>
    <string name="contribute_translate_go">Go to Transifex</string>
    <string name="contribute_bugs_title">Report bugs</string>
    <string name="contribute_bugs_description">If there is a bug in DistroHopper, that does not necessarily mean that I am aware of its existence. Developers are generally quite bad at testing their own applications as they will only use them in a way they are intended to be used. Some problems also only exist in certain specific circumstances (for example a certain device running a specific version of Android with some extra options enabled). So if you find a bug in DistroHopper (or if you have a feature request) you can help out by reporting it.
        \nBug reports for DistroHopper are kept on GitHub. If GitHub is too technical for you, you can also just send an e-mail to android-dev@robinj.be. Just make sure it\'s in English or Dutch. Please provide as much (relevant) information as possible.</string>
    <string name="contribute_bugs_go">Go to GitHub</string>
    <string name="contribute_donate_title">Donate</string>
</resources>