<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
       android:title="@string/option_lenses"
       android:summary="@string/hint_lenses">
       <intent
           android:targetPackage="be.robinj.distrohopper"
           android:targetClass="be.robinj.distrohopper.preferences.LensPreferencesActivity" />
   </Preference>

    <CheckBoxPreference
        android:key="dash_ready_show"
        android:title="@string/option_dash_ready_show"
        android:summary="@string/hint_dash_ready_show"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="widgets_enabled"
        android:title="@string/option_widgets_enabled"
        android:summary="@string/hint_widgets_enabled"
        android:defaultValue="true" />

</PreferenceScreen>
