<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/option_theme"
        android:summary="@string/hint_theme">
        <intent
            android:targetPackage="be.robinj.distrohopper"
            android:targetClass="be.robinj.distrohopper.preferences.ThemePreferencesActivity" />
    </Preference>

    <Preference
        android:title="@string/option_wallpaper"
        android:summary="@string/hint_wallpaper">
        <intent android:action="android.intent.action.SET_WALLPAPER" />
    </Preference>

    <be.robinj.distrohopper.thirdparty.SeekBarPreference
        android:key="launchericon_width"
        android:title="@string/option_launchericon_size"
        android:summary="@string/hint_launchericon_size"
        max="72"
        android:defaultValue="36" />

</PreferenceScreen>
